# Alphatoe

./: .gitignore  \  cfg.txt  foo.py  game.py  generate tic tac toes.ipynb  model.ipynb  model_clean.ipynb  model_good_games.pt  model_no_games.pt  monitor.sh  paper.md  pyrightconfig.json  requirements.txt  setup.cfg
Tic_Tac_Transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alphatoe/: data.py  evals.py  fancy_plots.py  game.py  interpretability.py  models.py  plot.py  train.py  trie.py
data/: moves.npy
notebooks/: 20231012_wind_conditions_mean_activation_vectors.ipynb  20231023_sparse_autoencoder.ipynb  230723_nick_interpreting_all_games.ipynb  230723_nick_interpreting_all_games_omar_screw_around.ipynb  230725_ablating_particular_heads.ipynb  230725_omar_more_ablations_2_head_prob_all_games.ipynb  230726_interpreting_mlp.ipynb  230801_mlp_neuron_ablations.ipynb  230803_head_ablation_game_end_type_all_games.ipynb  230807_mlp_neuron_ablation_normalized.ipynb  230807_showcase.ipynb  230808_head_ablation_game_end_type_all_games_normalized.ipynb  230808_normalized_mlp_neuron_ablations_moves_played.ipynb  230808_position_embed_activations.ipynb  230820_position_embed_activations_large_model.ipynb  230821_neuron_activation_vectors.ipynb  230822_nick_Wend.ipynb  230824_neuron_activation_vectors_pre_game_over copy.ipynb  230824_residual_stream_clustering_by_game_type.ipynb  230825_content_embeddings_on_mlp_win_conditions.ipynb  230827_content_embedding_transforms.ipynb  230830_principal_component_analysis_residual_stream.ipynb  (+35 more)
scripts/: README.md  (+17 more)
(+241 files in other folders)
