[metadata]
name = Tic-Tac-Transformer
version = 0.0.0
description = Using mechanistic interpretability techniques to understand the inside of a transformer that understands tic tac toe!
long_description = file: README.rst
keywords = Transformers, AI, Interpretability
maintainer = Jack Strand
maintainer_email = jackofthestrand@gmail.com 
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    torch
    transformer_lens
